--- a/Main/UnvaxxedSPRM/styles.css
+++ b/Main/UnvaxxedSPRM/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #FFD700;
+    --primary-color: ##d2f9f4;
     --secondary-color: #2a2a2a;
     --accent-color: #ffd700;
     --text-color: #ffffff;
