--- a/Main/UnvaxxedSPRM/styles.css
+++ b/Main/UnvaxxedSPRM/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: ##8cd4f7;
+    --primary-color: ##ff3e3e;
     --secondary-color: #2a2a2a;
     --accent-color: #ffd700;
     --text-color: #ffffff;
