--- a/Main/UnvaxxedSPRM/styles.css
+++ b/Main/UnvaxxedSPRM/styles.css
@@ -149,7 +149,8 @@ body {
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
                 url('images/hero.bg.jpg');
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat; /* Ensures the background doesn't tile */
     background-position: center;
     display: flex;
     align-items: center;
