--- a/Main/UnvaxxedSPRM/styles.css
+++ b/Main/UnvaxxedSPRM/styles.css
@@ -1636,28 +1636,27 @@ footer {
     margin: 5px 0; /* Reduce top and bottom margin */
     text-align: center;
 }
-
 .capsule {
-    padding: 2px 10px; /* Smaller padding */
-    border-radius: 10px; /* Less rounded corners */
-    font-size: 12px; /* Smaller font size */
+    padding: 2px 10px;
+    border-radius: 10px;
+    font-size: 12px;
     font-style: italic;
     text-transform: none;
-    background-color: #de9863;
-    color: #000;
+    background-color: #FFD700; /* Gold for vitality and value */
+    color: #000000; /* Black for strong contrast */
     display: inline-block;
     animation: glow 2s infinite;
 }
 
 .capsule.alternate {
-    background-color: #b9ede0;
-    color: #000;
+    background-color: #32CD32; /* Green for health and growth */
+    color: #FFFFFF; /* White for readability */
     animation: pulse 3s infinite;
 }
 
 .capsule:hover {
     transform: scale(1.05);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* Smaller shadow */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     transition: all 0.3s ease;
 }
 
