--- a/Main/UnvaxxedSPRM/styles.css
+++ b/Main/UnvaxxedSPRM/styles.css
@@ -1636,19 +1636,23 @@ footer {
 .capsule {
     padding: 2px 10px;
     border-radius: 10px;
-    font-size: 12px;
+    font-size: 18px;
+    font-family: 'Bangers', sans-serif;
     font-style: italic;
     text-transform: none;
     background-color: #FFD700; /* Gold for vitality and value */
     color: #000000; /* Black for strong contrast */
     display: inline-block;
     animation: glow 2s infinite;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .capsule.alternate {
     background-color: #32CD32; /* Green for health and growth */
     color: #FFFFFF; /* White for readability */
     animation: pulse 3s infinite;
+    font-family: 'Bangers', sans-serif;
+    font-size: 18px;
 }
 
 .capsule:hover {
