--- a/Main/UnvaxxedSPRM/styles.css
+++ b/Main/UnvaxxedSPRM/styles.css
@@ -1669,7 +1669,7 @@ footer {
 
 .video-section iframe {
     max-width: 100%;
-    height: auto;
+    height: 150%;
     border-radius: 10px; /* Optional: rounded corners */
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Optional: shadow effect */
 }
