--- a/Main/UnvaxxedSPRM/styles.css
+++ b/Main/UnvaxxedSPRM/styles.css
@@ -788,7 +788,7 @@ body {
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
                 url('Images/hero.bg.jpg');
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     display: flex;
     align-items: center;
