--- a/Main/UnvaxxedSPRM/styles.css
+++ b/Main/UnvaxxedSPRM/styles.css
@@ -790,6 +790,7 @@ body {
                 url('Images/hero.bg.jpg');
     background-size: contain;
     background-position: center;
+     background-repeat: no-repeat;
     display: flex;
     align-items: center;
     text-align: center;
